[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/UI/button_disable.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/button_1.png" type="Texture" id=2]
[ext_resource path="res://Script/menu_screen.gd" type="Script" id=3]
[ext_resource path="res://Scene/Components/trans_main_screen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/UI/button_0.png" type="Texture" id=5]
[ext_resource path="res://Assets/Theme/pixel_art_text.tres" type="Theme" id=6]

[sub_resource type="Animation" id=1]
resource_name = "reveal"
tracks/0/type = "value"
tracks/0/path = NodePath("trans_main_screen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="main_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -159.0
margin_top = 144.0
margin_right = 156.0
margin_bottom = 253.0
theme = ExtResource( 6 )
text = "Swipe
Adventure"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -74.0
margin_right = -20.0
margin_bottom = 198.0

[node name="continue" type="TextureButton" parent="VBoxContainer"]
margin_right = 350.0
margin_bottom = 80.0
rect_min_size = Vector2( 10, 80 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
texture_disabled = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/continue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -30.0
margin_right = 140.0
margin_bottom = 23.0
theme = ExtResource( 6 )
text = "Continue"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 84.0
margin_right = 350.0
margin_bottom = 88.0

[node name="new_game" type="TextureButton" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 350.0
margin_bottom = 172.0
rect_min_size = Vector2( 10, 80 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/new_game"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -30.0
margin_right = 140.0
margin_bottom = 23.0
theme = ExtResource( 6 )
text = "New Game"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 176.0
margin_right = 350.0
margin_bottom = 180.0

[node name="settings" type="TextureButton" parent="VBoxContainer"]
margin_top = 184.0
margin_right = 350.0
margin_bottom = 264.0
rect_min_size = Vector2( 10, 80 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -30.0
margin_right = 140.0
margin_bottom = 23.0
theme = ExtResource( 6 )
text = "Settings"
align = 1

[node name="trans_main_screen" parent="." instance=ExtResource( 4 )]
visible = false
modulate = Color( 1, 1, 1, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/reveal = SubResource( 1 )

[connection signal="pressed" from="VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/settings" to="." method="_on_settings_pressed"]
